# shelltide

./: Cargo.toml  README.md
src/: api.rs  cli.rs  commands.rs  config.rs  error.rs  main.rs
src/api/: clients.rs  polling.rs  traits.rs  types.rs
src/commands/: completion.rs  config.rs  diff.rs  dump.rs  env.rs  extract.rs  login.rs  migrate.rs  status.rs
